Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignObjectInteger.quorum
class Main
    action Main
        Object v = Test()
    end

    action Test() returns Object
        integer var = 5
        return var
    end
end